*
* 2.0-RC1
*

- Fixed LDAP authentication issues with Active Directory


*
* 2.0-M5
*

- Agent-side caching of collected data
- Fixed bug in handling floating point Windows performance counters
- Added "comments" attribute to NXSL "DCI" class
- New NXSL function sha256
- Fixed broken nxagent.sms SMS driver
- Added support for SNMP traps over IPv6
- Switched to SHA-256 for password hashing
- Timestamp can be provided in nxpush and nxapush
- New methods in NXSL class "Event": setMessage, setSeverity, setUserTag
- Command line options for nxagentd to change effective user and group after start
- Fixed occasional NXSL compiler crash on scripts with syntax errors
- Errors in auto bind/apply scripts interpreted as "ignore" instead of "false" result
- New core agent parameter File.FolderCount
- Fixed broken active discovery
- Improved system behaviour on large installations
- Management console:
	- Fixed broken VPN connectors configuration
	- "Inverted values" option on line charts
	- Filter in predefined graphs tree
	- Values of selected DCIs can be shown on object overview page
	- "Stacked" option added to line charts on dashboards
	- In-place file rename in file manager
	- Option to export data from line charts on dashboard to CSV file
	- "Select all objects" option in network maps
	- "Proxy node" option in DCI properties renamed to "Source node" to avoid confusion
- Android Console:
	- Added "capabilities" in node overview (changed to expandable list view)
- Fixed issues: #50, #630, #780, #781, #791, #794, #797, #798, #806, #815, #816, #817, #824, #832, #833, #837


*
* 2.0-M4
*

- Script export/import
- Object tools export/import
- DCI summary tables export/import
- Template hierarchy preserved during export/import
- NXSL functions and classes to work with alarms
- MEGATEC protocol support in UPS subagent
- Fixed broken WoL functionality
- Fixed broken PING subagent
- Fixed database upgrade issues on MS SQL
- IPv6 support in PING subagent