@@ -3,6 +3,7 @@
 *
 
 - Fixed LDAP authentication issues with Active Directory
+- Java subagent improved
 
 
 *
